第二次提交

--- a/selenium_robot/log.html
+++ b/selenium_robot/log.html
@@ -1732,25 +1732,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10908],[],[[4,0,1,0,[],[1,214,10685],[[0,5,6,0,7,8,0,0,[1,215,2918],[],[[216,2,9]]],[0,10,6,0,11,12,0,0,[1,3134,295],[],[[3134,2,13]]],[0,14,15,0,16,17,0,0,[1,3432,5001],[],[[8433,2,18]]],[0,19,6,0,20,21,0,0,[1,8433,111],[],[[8434,2,22]]],[0,23,6,0,24,0,0,0,[1,8544,2354],[],[]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,17280],[],[[4,0,1,0,[],[0,243,17030,5],[[0,6,7,0,8,9,0,0,[1,244,10002],[],[[10245,2,10]]],[0,11,12,0,13,14,0,0,[1,10248,6522],[],[[10249,2,15]]],[0,16,12,0,17,18,0,0,[0,16770,503],[[0,19,12,0,20,0,0,0,[1,16945,323],[],[[17268,2,21]]]],[[16771,2,22],[17272,5,5]]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test1","*H:\\robotframework\\selenium_robot\\test1.robot","*test1.robot","*Baidu search case","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the given <code>url\x3c/code>.\x3c/p>","*<a href=\"http://www.baidu.com\">http://www.baidu.com\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"http://www.baidu.com\">http://www.baidu.com\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into text field identified by <code>locator\x3c/code>.\x3c/p>","*id=kw, robot framework","*Typing text 'robot framework' into text field 'id=kw'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Slept 5 seconds","*Click Button","*<p>Clicks button identified by <code>locator\x3c/code>.\x3c/p>","*id=su","*Clicking button 'id=su'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test1","*H:\\robotframework\\selenium_robot\\test1.robot","*test1.robot","*Cxm caiwu login","*Element with locator 'id:userName' not found.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*10","*Slept 10 seconds","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the given <code>url\x3c/code>.\x3c/p>","*<a href=\"http://test.mmp-new.caixm.cn/\">http://test.mmp-new.caixm.cn/\x3c/a>, chrome","*Opening browser 'chrome' to base url '<a href=\"http://test.mmp-new.caixm.cn/\">http://test.mmp-new.caixm.cn/\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into text field identified by <code>locator\x3c/code>.\x3c/p>","*id:userName, 15868134428","*Capture Page Screenshot","*<p>Takes screenshot of the current page and embeds it into log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-4.png\"><img src=\"selenium-screenshot-4.png\" width=\"800px\">\x3c/a>","*Typing text '15868134428' into text field 'id:userName'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Test1","name":"Test1","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:17","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"Test1","name":"Test1","pass":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1614153711849;
+window.output["baseMillis"] = 1614158530533;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10942;
+window.output["generated"] = 17295;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
