--- a/selenium_robot/report.html
+++ b/selenium_robot/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10908],[],[[4,0,1,0,[],[1,214,10685],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,17280],[],[[4,0,1,0,[],[0,243,17030,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test1","*H:\\robotframework\\selenium_robot\\test1.robot","*test1.robot","*Baidu search case"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test1","*H:\\robotframework\\selenium_robot\\test1.robot","*test1.robot","*Cxm caiwu login","*Element with locator 'id:userName' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Test1","name":"Test1","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:17","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"Test1","name":"Test1","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1614153711849;
+window.output["baseMillis"] = 1614158530533;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10942;
+window.output["generated"] = 17295;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
